--- a/example/index.html
+++ b/example/index.html
@@ -3,6 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Example</title>
+  <style>
+    body, html {
+      height: 100%;
+      margin: 0;
+    }
+
+    #app {
+      height: 100%;
+    }
+  </style>
 </head>
 <body>
   <div id="app"></div>
