--- a/example/index.html
+++ b/example/index.html
@@ -7,6 +7,8 @@
     body, html {
       height: 100%;
       margin: 0;
+      font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
+      font-size: 14px;
     }
 
     #app {
