--- a/example/index.html
+++ b/example/index.html
@@ -3,21 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Example</title>
-  <style>
-    body, html {
-      height: 100%;
-      margin: 0;
-      font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
-      font-size: 14px;
-    }
-
-    #app {
-      height: 100%;
-    }
-  </style>
 </head>
 <body>
   <div id="app"></div>
-  <script src="../index.js"></script>
+  <script src="../example-bundle.js"></script>
 </body>
 </html>
